fix: elements overlap

--- a/src/index.styl
+++ b/src/index.styl
@@ -18,4 +18,5 @@ body
     width 100%
 
 .score-maker
+  position relative
   @import "style/score-maker"
